# luxstatus

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  DOCKER_MACOS_BUILD.md  GITHUB_SETUP.md  LICENSE  README.md  USER_GUIDE.md  deploy_macos.py  deploy_unified.py  deploy_windows.py  pyproject.toml  requirements.txt  secure_mic_monitor.py  setup.py
.github/workflows/: build-release.yml
mic_monitor/: cli.py  status_manager.py
mic_monitor/devices/: __init__.py  luxafor.py
mic_monitor/platform/: __init__.py  linux.py  macos.py  windows.py  windows_audio_api.py
