[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mic-monitor"
version = "0.1.0"
authors = [
    { name="AltaML" },
]
description = "Microphone monitoring tool with Luxafor integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask==2.0.3",
    "appdirs==1.4.4",
    "pystray==0.19.4",
    "pillow>=9.5.0",
    "requests==2.31.0",
]

[project.scripts]
mic-monitor = "mic_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mic_monitor*"] 